<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal|center_vertical"
              android:orientation="vertical">

    <ImageView android:id="@+id/login_headerSpacer" android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="0.33"
               android:contentDescription="Spacer"/>

    <EditText
            android:id="@+id/login_userNameText"
            android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter username"
            android:ems="10">
    </EditText>

    <EditText
            android:id="@+id/login_passwordText"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter password"
            android:ems="10">
    </EditText>

    <ImageView android:id="@+id/login_spacerBetweenFieldsAndButton" android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="0.1"
               android:contentDescription="Spacer"/>

    <Button android:id="@+id/login_loginButton" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="Login to Dristhi" android:onClick="login" android:ems="10"/>

    <ImageView android:id="@+id/login_spacerBetweenButtonAndStatus" android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="0.1"
               android:contentDescription="Spacer"/>

    <TextView android:id="@+id/login_status" android:layout_height="wrap_content" android:layout_width="wrap_content" />
    <ProgressBar android:id="@+id/login_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    <ImageView android:id="@+id/login_footerSpacer" android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"
               android:contentDescription="Spacer"/>
</LinearLayout>
