<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="Server">

       <EditTextPreference 
            android:key="DRISHTI_BASE_URL"
            android:title="OpenSRP base URL" 
            android:summary="Defines the base server url that handles requests"
            android:dialogTitle="OpenSRP base URL"
            android:dialogMessage="Enter Base Server Url"    
            android:defaultValue="http://10.10.10.100:9979"
            android:persistent="true"/>

    </PreferenceCategory>
</PreferenceScreen>